welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: object java.awt.Color is not a value
var c = Color
        ^