welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
var couleur = false

def hunt(c:Color) {
  while (estSurBiscuit()==false) {
  	isFacingTrail();
    if (couleur==true){
      avance();
    }
  	
  }
     
}

var c = Color

def isFacingTrail():Boolean = { 
	if (estFaceMur==false) {
		avance();
  	if (getCouleurSol()==c) {
  		recule();
    	couleur = true;
  	
    	}
    	else { 
      	recule();
  			couleur = false
      }   
 	}
  else gauche()
  return couleur  
}